# harmonix-aol-arch

./: .gitignore  AOL-components.md  BEST_PRACTICES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG_COMPARISON.md  CONTRIBUTING.md  Comprehensive Guide to Essential Components in AOL Service Configurations for Multi-Agent Collaboration.md  Dockerfile  LICENSE  README.md  SECURITY.md  agent.py  config-with-data.yaml  config.yaml  create-service.sh  enhancing-aol-template.md  makefile  manifest-with-data.yaml  manifest.yaml  pyproject.toml  requirements.txt  sidecar.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yaml  ci.yml  dependabot-auto-merge.yml
aol-core/: Dockerfile  aol_core_servicer.py  config.yaml  event_store.py  main.py  monitor_api.py  requirements.txt
aol-core/api/: __init__.py  logging_service.py  metrics_service.py  proto_registry.py  service_discovery.py  tracing_service.py
aol-core/health/: health_manager.py
aol-core/proto/: aol_service.proto  common.proto  health.proto  metrics.proto
aol-core/registry/: consul_registry.py  docker_discovery.py  service_registry.py
aol-core/router/: grpc_router.py
aol-core/utils/: __init__.py  logging.py  metrics.py  tracing.py
core-monitor/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: AOL-About.md  AOL-multi-mesh-config-own.md  ARCHITECTURE.md  BEST_PRACTICES.md  DIME-POINTS.md  IMPLEMENTATION_SUMMARY.md  Infrs-README.md  LOGGING.md  consul-migration.md  data_patterns.md  dynamic-infra-AOL.md  internal-ai-healing-system.md  multi-agent system-need.md
examples/: shared_collection_example.py  simple_storage_example.py
infrastructure/: README.md
integration/: __init__.py  base.py  llm_adapter.py  tool_registry.py
proto/: service.proto
service/: __init__.py  main.py
sidecar/: health.py  sidecar.py
tests/: conftest.py  test_manifest.py  test_validators.py
utils/: __init__.py  consul_client.py  db_client.py  event_bus.py  grpc_client.py  logging.py  tracing.py  validators.py
(+46 files in other folders)
