[project]
name = "harmonix-aol-arch"
version = "0.1.0"
description = ""
authors = [
    {name = "gokulnathan66",email = "gokulg23011@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio-health-checking (==1.60.0)",
    "protobuf (==4.25.1)",
    "python-consul (==1.1.0)",
    "pyyaml (==6.0.1)",
    "prometheus-client (==0.19.0)",
    "opentelemetry-api (==1.22.0)",
    "opentelemetry-sdk (==1.22.0)",
    "opentelemetry-exporter-otlp-proto-grpc (==1.22.0)",
    "opentelemetry-instrumentation-aiohttp-client (==0.43b0)",
    "aiohttp (==3.9.1)",
    "tenacity (==8.2.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
